tests/semantic/valid/17_r4_mutual_forward.hulk
function a() => b();
function b() => 1;

print(a());
