tests/semantic/invalid/11_r3_duplicate_params_three.hulk
function g(a, b, a) => a;

print(g(1, 2));
